--- a/src/test/resources/messages_en.properties
+++ b/src/test/resources/messages_en.properties
@@ -1,2 +1,11 @@
 SendSMS.message=Your Verification code is 
 Layout.Copyright=©2022 - Constellation
+
+exception.userAlreadyRegisteredMessage=User already registered. Please use different username.
+exception.unableToAuthenticateUserMessage= Unable To authenticate user. Please verify your credentials.
+
+error.authentication.verificationCodeNotGeneratedMessage=No se ha podido generar el c\u00f3digo de verificaci\u00f3n.
+error.authentication.verificationCodeNotFilledMessage=El c\u00f3digo de verificaci\u00f3n es obligatorio.
+error.authentication.verificationCodeDoesNotMatchMessage=El c\u00f3digo de verificaci\u00f3n no es correcto.
+
+sendSMS.message=Your Verification code is 
